--- a/trunk/Molecule.WebSite/Web.config
+++ b/trunk/Molecule.WebSite/Web.config
@@ -38,7 +38,7 @@
 
   <system.web>
     
-    <customErrors mode="RemoteOnly">
+    <customErrors mode="On">
       <error statusCode="500" redirect="~/Error.aspx"/>
     </customErrors>
 
