--- a/trunk/WebMusic/WebMusic.Providers.Banshee/WebMusic.Providers.Banshee.csproj
+++ b/trunk/WebMusic/WebMusic.Providers.Banshee/WebMusic.Providers.Banshee.csproj
@@ -41,9 +41,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Mono.Data.Sqlite">
+    <Reference Include="Mono.Data.Sqlite, Version=2.0.0.0, Culture=neutral, PublicKeyToken=0738eb9f132ed756, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\references\Mono.Data.Sqlite.dll</HintPath>
+      <HintPath>..\..\references\Mono.Data.Sqlite.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core">
