--- a/branches/pfresnay/WebMusic/WebMusic.Providers.Banshee/WebMusic.Providers.Banshee.csproj
+++ b/branches/pfresnay/WebMusic/WebMusic.Providers.Banshee/WebMusic.Providers.Banshee.csproj
@@ -6,6 +6,9 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
+    <OutputType>Library</OutputType>
+    <StartupObject>
+    </StartupObject>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <OutputType>Library</OutputType>
