--- a/trunk/Molecule.WebSite/Molecule.WebSite.csproj
+++ b/trunk/Molecule.WebSite/Molecule.WebSite.csproj
@@ -80,13 +80,6 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="admin\AdminWebControlContainer.ascx.cs">
-      <DependentUpon>AdminWebControlContainer.ascx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="admin\AdminWebControlContainer.ascx.designer.cs">
-      <DependentUpon>AdminWebControlContainer.ascx</DependentUpon>
-    </Compile>
     <Compile Include="admin\CreateUser.aspx.cs">
       <DependentUpon>CreateUser.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -102,13 +95,6 @@
       <DependentUpon>Default.aspx</DependentUpon>
     </Compile>
     <Compile Include="AtomeSiteMapProvider.cs" />
-    <Compile Include="atomes\webmusic\admin\AdminControl.ascx.cs">
-      <DependentUpon>AdminControl.ascx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="atomes\webmusic\admin\AdminControl.ascx.designer.cs">
-      <DependentUpon>AdminControl.ascx</DependentUpon>
-    </Compile>
     <Compile Include="atomes\webmusic\admin\Default.aspx.cs">
       <DependentUpon>Default.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -170,6 +156,13 @@
     </Compile>
     <Compile Include="Page.Master.designer.cs">
       <DependentUpon>Page.Master</DependentUpon>
+    </Compile>
+    <Compile Include="PreferencesPage.Master.cs">
+      <DependentUpon>PreferencesPage.Master</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="PreferencesPage.Master.designer.cs">
+      <DependentUpon>PreferencesPage.Master</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Default.aspx.cs">
@@ -233,9 +226,9 @@
   <ItemGroup>
     <Content Include="App_Themes\default\AjaxExtenders.skin" />
     <None Include="Atome.xsd" />
+    <Content Include="PreferencesPage.Master" />
     <Content Include="atomes\webmusic\images\dialog-warning.png" />
     <Content Include="Web.sitemap" />
-    <Content Include="atomes\webmusic\admin\Web.sitemap" />
     <Content Include="atomes\webmusic\Web.sitemap" />
   </ItemGroup>
   <ItemGroup>
@@ -254,11 +247,9 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="admin\AdminWebControlContainer.ascx" />
     <Content Include="App_LocalResources\Page.Master.fr.resx">
       <SubType>Designer</SubType>
     </Content>
-    <Content Include="atomes\webmusic\admin\AdminControl.ascx" />
     <Content Include="atomes\webmusic\images\document-save.png" />
   </ItemGroup>
   <ItemGroup>
