--- a/trunk/Molecule.WebSite/Molecule.WebSite.csproj
+++ b/trunk/Molecule.WebSite/Molecule.WebSite.csproj
@@ -47,6 +47,10 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\references\AjaxControlToolkit.dll</HintPath>
     </Reference>
+    <Reference Include="Brettle.Web.NeatUpload, Version=1.3.3306.26233, Culture=neutral">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\references\Brettle.Web.NeatUpload.dll</HintPath>
+    </Reference>
     <Reference Include="ICSharpCode.SharpZipLib">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\references\ICSharpCode.SharpZipLib.dll</HintPath>
@@ -95,6 +99,13 @@
       <DependentUpon>Default.aspx</DependentUpon>
     </Compile>
     <Compile Include="AtomeSiteMapProvider.cs" />
+    <Compile Include="atomes\upload\Default.aspx.cs">
+      <DependentUpon>Default.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="atomes\upload\Default.aspx.designer.cs">
+      <DependentUpon>Default.aspx</DependentUpon>
+    </Compile>
     <Compile Include="atomes\webmusic\admin\Default.aspx.cs">
       <DependentUpon>Default.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -228,6 +239,7 @@
     <Content Include="App_Themes\bloup\TreeView.skin" />
     <Content Include="App_Themes\default\TreeView.skin" />
     <None Include="Atome.xsd" />
+    <Content Include="atomes\upload\Web.sitemap" />
     <Content Include="PreferencesPage.Master" />
     <Content Include="atomes\webmusic\images\dialog-warning.png" />
     <Content Include="Web.sitemap" />
@@ -257,7 +269,14 @@
   <ItemGroup>
     <Content Include="App_Themes\bloup\molecule.css" />
     <Content Include="App_Themes\default\common.css" />
+    <Content Include="atomes\upload\Atome.xml" />
+    <Content Include="atomes\upload\Default.aspx" />
+    <Content Include="atomes\upload\scripts\default.js" />
+    <Content Include="atomes\upload\style\layout.css" />
     <Content Include="Error.aspx" />
+    <Content Include="NeatUpload\NeatUpload.js" />
+    <Content Include="NeatUpload\Progress.aspx" />
+    <Content Include="NeatUpload\Progress.js" />
     <EmbeddedResource Include="atomes\webmusic\Services\Messages.resx">
       <SubType>Designer</SubType>
       <Generator>PublicResXFileCodeGenerator</Generator>
