--- a/trunk/Molecule.WebSite/Molecule.WebSite.csproj
+++ b/trunk/Molecule.WebSite/Molecule.WebSite.csproj
@@ -47,7 +47,7 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\references\AjaxControlToolkit.dll</HintPath>
     </Reference>
-    <Reference Include="Brettle.Web.NeatUpload, Version=1.3.3306.26233, Culture=neutral">
+    <Reference Include="Brettle.Web.NeatUpload, Version=1.3.3314.32796, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\references\Brettle.Web.NeatUpload.dll</HintPath>
     </Reference>
@@ -161,6 +161,13 @@
     <Compile Include="Login.aspx.designer.cs">
       <DependentUpon>Login.aspx</DependentUpon>
     </Compile>
+    <Compile Include="NeatUpload\Progress.aspx.cs">
+      <DependentUpon>Progress.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="NeatUpload\Progress.aspx.designer.cs">
+      <DependentUpon>Progress.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Page.Master.cs">
       <DependentUpon>Page.Master</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -269,6 +276,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="App_Themes\bloup\molecule.css" />
+    <Content Include="App_Themes\bloup\progressbarlayout.css" />
     <Content Include="App_Themes\default\common.css" />
     <Content Include="atomes\upload\Atome.xml" />
     <Content Include="atomes\upload\Default.aspx" />
@@ -281,6 +289,7 @@
     <Content Include="App_LocalResources\PreferencesPage.Master.fr.resx">
       <SubType>Designer</SubType>
     </Content>
+    <Content Include="images\refresh.png" />
     <Content Include="NeatUpload\NeatUpload.js" />
     <Content Include="NeatUpload\Progress.aspx" />
     <Content Include="NeatUpload\Progress.js" />
@@ -309,7 +318,7 @@
         <WebProjectProperties>
           <UseIIS>False</UseIIS>
           <AutoAssignPort>True</AutoAssignPort>
-          <DevelopmentServerPort>3566</DevelopmentServerPort>
+          <DevelopmentServerPort>21624</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
           <IISUrl>
           </IISUrl>
