change the size max of the file which can be uploaded

--- a/trunk/Molecule.WebSite/Web.config
+++ b/trunk/Molecule.WebSite/Web.config
@@ -37,7 +37,7 @@
 
 
   <system.web>
-    
+    <httpRuntime maxRequestLength="2097151" executionTimeout="36000" />
     <customErrors mode="Off">
       <error statusCode="500" redirect="~/Error.aspx"/>
     </customErrors>
