--- a/trunk/Molecule.WebSite/Molecule.WebSite.csproj
+++ b/trunk/Molecule.WebSite/Molecule.WebSite.csproj
@@ -47,7 +47,7 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\references\AjaxControlToolkit.dll</HintPath>
     </Reference>
-    <Reference Include="Brettle.Web.NeatUpload, Version=1.3.3314.32796, Culture=neutral, processorArchitecture=MSIL">
+    <Reference Include="Brettle.Web.NeatUpload, Version=1.3.3314.32796, Culture=neutral, PublicKeyToken=null">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\references\Brettle.Web.NeatUpload.dll</HintPath>
     </Reference>
@@ -328,5 +328,7 @@
   <PropertyGroup>
     <PreBuildEvent>
     </PreBuildEvent>
+    <ProjectGuid>{99FF5204-4E9F-4B34-9185-72BF089FC4BD}</ProjectGuid>
+    <RootNamespace>Molecule.WebSite</RootNamespace>
   </PropertyGroup>
 </Project>
