--- a/trunk/Molecule.WebSite/Molecule.WebSite.csproj
+++ b/trunk/Molecule.WebSite/Molecule.WebSite.csproj
@@ -278,6 +278,11 @@
     <Content Include="atomes\upload\Default.aspx" />
     <Content Include="atomes\upload\scripts\default.js" />
     <Content Include="atomes\upload\style\layout.css" />
+    <Content Include="atomes\webmusic\bin\providers\log4net.dll" />
+    <Content Include="atomes\webmusic\bin\providers\Mono.Data.Sqlite.dll" />
+    <Content Include="atomes\webmusic\bin\providers\WebMusic.Providers.Banshee.dll" />
+    <Content Include="atomes\webmusic\bin\providers\WebMusic.Providers.Rhythmbox.dll" />
+    <Content Include="atomes\webmusic\bin\providers\WebMusic.Providers.Stub.dll" />
     <Content Include="Error.aspx" />
     <Content Include="App_LocalResources\PreferencesPage.Master.resx">
       <SubType>Designer</SubType>
@@ -298,7 +303,6 @@
   <ItemGroup>
     <Folder Include="App_Themes\default\images\" />
     <Folder Include="App_Themes\raw\" />
-    <Folder Include="atomes\webmusic\bin\providers\" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\VisualStudio\v9.0\WebApplications\Microsoft.WebApplication.targets" />
