--- a/trunk/Molecule.WebSite/Molecule.WebSite.csproj
+++ b/trunk/Molecule.WebSite/Molecule.WebSite.csproj
@@ -145,6 +145,9 @@
       <DependentUpon>Default.aspx</DependentUpon>
     </Compile>
     <Compile Include="atomes\webmusic\Services\ProviderException.cs" />
+    <Compile Include="CacheHandler.ashx.cs">
+      <DependentUpon>CacheHandler.ashx</DependentUpon>
+    </Compile>
     <Compile Include="Error.aspx.cs">
       <DependentUpon>Error.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -248,6 +251,7 @@
     <Content Include="App_Themes\default\TreeView.skin" />
     <Content Include="App_Themes\bloup\AjaxExtenders.skin" />
     <None Include="Atome.xsd" />
+    <Content Include="CacheHandler.ashx" />
     <Content Include="atomes\webmusic\CoverArt\CoverArtFileHandler.ashx" />
     <Content Include="atomes\upload\Web.sitemap" />
     <Content Include="PreferencesPage.Master" />
