--- a/trunk/Molecule.WebSite/Web.config
+++ b/trunk/Molecule.WebSite/Web.config
@@ -106,9 +106,9 @@
       <add verb="GET,HEAD" path="ScriptResource.axd" type="System.Web.Handlers.ScriptResourceHandler, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" validate="false"/>
       <add verb="*" path="*.media" type="WebMusic.MediaFileHandler" validate="false"/>
       <add verb="*" path="~/atomes/webmusic/CoverArt/*.jpg" type="WebMusic.CoverArt.CoverArtFileHandler" validate="false"/>
-      <add verb="*" path="*.png" type="Molecule.WebSite.CacheHandler" validate="false"/>
+      <!--<add verb="*" path="*.png" type="Molecule.WebSite.CacheHandler" validate="false"/>
       <add verb="*" path="*.swf" type="Molecule.WebSite.CacheHandler" validate="false"/>
-      <add verb="*" path="*.js" type="Molecule.WebSite.CacheHandler" validate="false"/>
+      <add verb="*" path="*.js" type="Molecule.WebSite.CacheHandler" validate="false"/>-->
     </httpHandlers>
     <httpModules>
       <add name="UploadHttpModule" type="Brettle.Web.NeatUpload.UploadHttpModule, Brettle.Web.NeatUpload"/>
