--- a/trunk/Molecule.WebSite/Molecule.WebSite.csproj
+++ b/trunk/Molecule.WebSite/Molecule.WebSite.csproj
@@ -2,7 +2,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.30729</ProductVersion>
+    <ProductVersion>9.0.21022</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{99FF5204-4E9F-4B34-9185-72BF089FC4BD}</ProjectGuid>
     <ProjectTypeGuids>{349c5851-65df-11da-9384-00065b846f21};{fae04ec0-301f-11d3-bf4b-00c04f79efbc}</ProjectTypeGuids>
@@ -145,8 +145,8 @@
       <DependentUpon>Default.aspx</DependentUpon>
     </Compile>
     <Compile Include="atomes\webmusic\Services\ProviderException.cs" />
-    <Compile Include="CacheHandler.ashx.cs">
-      <DependentUpon>CacheHandler.ashx</DependentUpon>
+    <Compile Include="ImageHandler.ashx.cs">
+      <DependentUpon>ImageHandler.ashx</DependentUpon>
     </Compile>
     <Compile Include="Error.aspx.cs">
       <DependentUpon>Error.aspx</DependentUpon>
@@ -210,17 +210,16 @@
     <Content Include="atomes\webmusic\admin\Default.aspx" />
     <Content Include="atomes\webmusic\Atome.xml" />
     <Content Include="atomes\webmusic\Download.aspx" />
-    <Content Include="atomes\webmusic\images\audio-volume-high.png" />
-    <Content Include="atomes\webmusic\images\audio-volume-low.png" />
-    <Content Include="atomes\webmusic\images\list-add.png" />
-    <Content Include="atomes\webmusic\images\media-playback-pause.png" />
-    <Content Include="atomes\webmusic\images\media-playback-start-small.png" />
-    <Content Include="atomes\webmusic\images\media-playback-start.png" />
-    <Content Include="atomes\webmusic\images\media-skip-backward.png" />
-    <Content Include="atomes\webmusic\images\media-skip-forward.png" />
-    <Content Include="atomes\webmusic\images\system-search.png" />
+    <Content Include="App_Themes\bloup\images\audio-volume-high.png" />
+    <Content Include="App_Themes\bloup\images\audio-volume-low.png" />
+    <Content Include="App_Themes\bloup\images\list-add.png" />
+    <Content Include="App_Themes\bloup\images\media-playback-pause.png" />
+    <Content Include="App_Themes\bloup\images\media-playback-start-small.png" />
+    <Content Include="App_Themes\bloup\images\media-playback-start.png" />
+    <Content Include="App_Themes\bloup\images\media-skip-backward.png" />
+    <Content Include="App_Themes\bloup\images\media-skip-forward.png" />
+    <Content Include="App_Themes\bloup\images\system-search.png" />
     <Content Include="atomes\webmusic\scripts\default.js" />
-    <Content Include="atomes\webmusic\scripts\silverlightPlayer.js" />
     <Content Include="atomes\webmusic\scripts\sm2player.js" />
     <Content Include="atomes\webmusic\scripts\soundmanager2-nodebug-jsmin.js" />
     <Content Include="atomes\webmusic\scripts\soundmanager2.js" />
@@ -251,10 +250,10 @@
     <Content Include="App_Themes\default\TreeView.skin" />
     <Content Include="App_Themes\bloup\AjaxExtenders.skin" />
     <None Include="Atome.xsd" />
-    <Content Include="CacheHandler.ashx" />
+    <Content Include="ImageHandler.ashx" />
     <Content Include="atomes\webmusic\CoverArt\CoverArtFileHandler.ashx" />
     <Content Include="PreferencesPage.Master" />
-    <Content Include="atomes\webmusic\images\dialog-warning.png" />
+    <Content Include="App_Themes\bloup\images\dialog-warning.png" />
     <Content Include="Web.sitemap" />
   </ItemGroup>
   <ItemGroup>
@@ -276,7 +275,7 @@
     <Content Include="App_LocalResources\Page.Master.fr.resx">
       <SubType>Designer</SubType>
     </Content>
-    <Content Include="atomes\webmusic\images\document-save.png" />
+    <Content Include="App_Themes\bloup\images\document-save.png" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="App_Themes\bloup\molecule.css" />
@@ -291,7 +290,7 @@
     <Content Include="atomes\webmusic\bin\providers\WebMusic.Providers.Banshee.dll" />
     <Content Include="atomes\webmusic\bin\providers\WebMusic.Providers.Rhythmbox.dll" />
     <Content Include="atomes\webmusic\bin\providers\WebMusic.Providers.Stub.dll" />
-    <Content Include="atomes\webmusic\images\list-remove.png" />
+    <Content Include="App_Themes\bloup\images\list-remove.png" />
     <Content Include="Error.aspx" />
     <Content Include="App_LocalResources\PreferencesPage.Master.resx">
       <SubType>Designer</SubType>
@@ -299,7 +298,7 @@
     <Content Include="App_LocalResources\PreferencesPage.Master.fr.resx">
       <SubType>Designer</SubType>
     </Content>
-    <Content Include="images\refresh.png" />
+    <Content Include="App_Themes\bloup\images\refresh.png" />
     <Content Include="NeatUpload\NeatUpload.js" />
     <Content Include="NeatUpload\Progress.aspx" />
     <Content Include="NeatUpload\Progress.js" />
@@ -333,9 +332,6 @@
           <IISUrl>
           </IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
-          <UseCustomServer>False</UseCustomServer>
-          <CustomServerUrl>
-          </CustomServerUrl>
           <SaveServerSettingsInUserFile>False</SaveServerSettingsInUserFile>
         </WebProjectProperties>
       </FlavorProperties>
