--- a/trunk/Molecule.WebSite/Web.config
+++ b/trunk/Molecule.WebSite/Web.config
@@ -33,7 +33,7 @@
 	</location>
 	<system.web>
 		<httpRuntime maxRequestLength="2097151" executionTimeout="36000"/>
-		<customErrors mode="Off">
+		<customErrors mode="On">
 			<error statusCode="500" redirect="~/Error.aspx"/>
 		</customErrors>
 		<globalization uiCulture="auto" culture="auto"/>
@@ -78,7 +78,7 @@
 			</providers>
 		</siteMap>
 		<sessionState timeout="600"/>
-		<pages styleSheetTheme="bloup">
+		<pages theme="bloup">
 			<controls>
 				<add tagPrefix="asp" namespace="System.Web.UI" assembly="System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
 				<add tagPrefix="asp" namespace="System.Web.UI.WebControls" assembly="System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
@@ -92,9 +92,7 @@
 			<add verb="GET,HEAD" path="ScriptResource.axd" type="System.Web.Handlers.ScriptResourceHandler, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" validate="false"/>
 			<add verb="*" path="*.media" type="WebMusic.MediaFileHandler" validate="false"/>
 			<add verb="*" path="~/atomes/webmusic/CoverArt/*.jpg" type="WebMusic.CoverArt.CoverArtFileHandler" validate="false"/>
-			<!--<add verb="*" path="*.png" type="Molecule.WebSite.CacheHandler" validate="false"/>
-      <add verb="*" path="*.swf" type="Molecule.WebSite.CacheHandler" validate="false"/>
-      <add verb="*" path="*.js" type="Molecule.WebSite.CacheHandler" validate="false"/>-->
+			<!--<add verb="*" path="~/images/*.*" type="Molecule.WebSite.ImageHandler" validate="false"/>-->
 		</httpHandlers>
 		<httpModules>
 			<add name="UploadHttpModule" type="Brettle.Web.NeatUpload.UploadHttpModule, Brettle.Web.NeatUpload"/>
