--- a/trunk/Molecule/Molecule.csproj
+++ b/trunk/Molecule/Molecule.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.30729</ProductVersion>
+    <ProductVersion>9.0.21022</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{5328FC2C-EB3D-48A2-AC5D-4CD4C9DC569E}</ProjectGuid>
     <OutputType>Library</OutputType>
@@ -85,6 +85,7 @@
     <Compile Include="Configuration\XmlConfigurationClient.cs" />
     <Compile Include="DateTimeUtil.cs" />
     <Compile Include="Drawing\BitmapExtensions.cs" />
+    <Compile Include="IO\Extensions.cs" />
     <Compile Include="IO\XdgBaseDirectorySpec.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Runtime\Plugin.cs" />
