--- a/trunk/WebPhoto/WebPhoto.Providers.Stub/WebPhoto.Providers.Stub.csproj
+++ b/trunk/WebPhoto/WebPhoto.Providers.Stub/WebPhoto.Providers.Stub.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.21022</ProductVersion>
+    <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{72D247CB-1535-412A-B20C-38A6C898341A}</ProjectGuid>
     <OutputType>Library</OutputType>
@@ -53,10 +53,12 @@
     <ProjectReference Include="..\..\Molecule\Molecule.csproj">
       <Project>{5328FC2C-EB3D-48A2-AC5D-4CD4C9DC569E}</Project>
       <Name>Molecule</Name>
+      <Private>False</Private>
     </ProjectReference>
     <ProjectReference Include="..\WebPhoto.Providers\WebPhoto.Providers.csproj">
       <Project>{6432DC42-CF0D-437A-909C-41E416F531B2}</Project>
       <Name>WebPhoto.Providers</Name>
+      <Private>False</Private>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
