add calendar page

--- a/trunk/Molecule.WebSite/Web.config
+++ b/trunk/Molecule.WebSite/Web.config
@@ -33,7 +33,7 @@
 	</location>
 	<system.web>
 		<httpRuntime maxRequestLength="2097151" executionTimeout="36000"/>
-		<customErrors mode="On">
+		<customErrors mode="Off">
 			<error statusCode="500" redirect="~/Error.aspx"/>
 		</customErrors>
 		<globalization uiCulture="auto" culture="auto"/>
