--- a/trunk/Molecule.WebSite/Molecule.WebSite.csproj
+++ b/trunk/Molecule.WebSite/Molecule.WebSite.csproj
@@ -99,12 +99,12 @@
       <DependentUpon>Default.aspx</DependentUpon>
     </Compile>
     <Compile Include="AtomeSiteMapProvider.cs" />
-    <Compile Include="atomes\photo\Calendar.ascx.cs">
-      <DependentUpon>Calendar.ascx</DependentUpon>
+    <Compile Include="atomes\photo\Calendar.aspx.cs">
+      <DependentUpon>Calendar.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="atomes\photo\Calendar.ascx.designer.cs">
-      <DependentUpon>Calendar.ascx</DependentUpon>
+    <Compile Include="atomes\photo\Calendar.aspx.designer.cs">
+      <DependentUpon>Calendar.aspx</DependentUpon>
     </Compile>
     <Compile Include="atomes\photo\Default.aspx.cs">
       <DependentUpon>Default.aspx</DependentUpon>
@@ -317,7 +317,7 @@
     <Content Include="App_Themes\bloup\progressbarlayout.css" />
     <Content Include="App_Themes\default\common.css" />
     <Content Include="atomes\photo\Atome.xml" />
-    <Content Include="atomes\photo\Calendar.ascx" />
+    <Content Include="atomes\photo\Calendar.aspx" />
     <Content Include="atomes\photo\Default.aspx" />
     <Content Include="atomes\photo\stublibrary\photo1.jpg" />
     <Content Include="atomes\photo\stublibrary\photo9.jpg" />
