add tagsitemapprovider add basic tag filtering and test treeview

--- a/trunk/Molecule.WebSite/Web.config
+++ b/trunk/Molecule.WebSite/Web.config
@@ -33,7 +33,7 @@
 	</location>
 	<system.web>
 		<httpRuntime maxRequestLength="2097151" executionTimeout="36000"/>
-		<customErrors mode="On">
+		<customErrors mode="Off">
 			<error statusCode="500" redirect="~/Error.aspx"/>
 		</customErrors>
 		<globalization uiCulture="auto" culture="auto"/>
@@ -75,6 +75,7 @@
 				<clear/>
 				<add name="XmlSiteMapProvider" type="System.Web.XmlSiteMapProvider" siteMapFile="Web.sitemap" securityTrimmingEnabled="true"/>
 				<add name="AtomeSiteMapProvider" type="Molecule.WebSite.AtomeSiteMapProvider" title="Atomes" url="Default.aspx" securityTrimmingEnabled="true"/>
+        <add name="tagSiteMapProvider" type="WebPhoto.Services.TagSiteMapProvider" />
 			</providers>
 		</siteMap>
 		<sessionState timeout="600"/>
