fix recursive tag listing

--- a/trunk/Molecule.WebSite/Web.config
+++ b/trunk/Molecule.WebSite/Web.config
@@ -136,4 +136,9 @@
 			</dependentAssembly>
 		</assemblyBinding>
 	</runtime>
+  <system.net>
+    <settings>
+      <ipv6 enabled="true"/>
+    </settings>
+  </system.net>
 </configuration>
